# clibTool

./: CMakeLists.txt  record.md
cmake/: cudalib.cmake  opencvlib.cmake
include/: clibTool.h  convnet.h  includex.h  intel_imgproc.h  nn.h
src/: clibTool.cpp
src/lib1/: CMakeLists.txt  lib1.cpp
src/lib2/: CMakeLists.txt  lib2.cpp
src/lib3/: CMakeLists.txt  lib3.cpp
src/test1/: CMakeLists.txt  test1.cpp
src/test2/: CMakeLists.txt  test2.cpp
